# diff-dir

./: .gitignore  CMakeLists.txt  README.md  diff-dir.conf.yaml  test.tar.xz  test.xz
cxxopts/: cxxopts.info
dtl/: Diff.hpp  dtl.info
src/: concurrent.h  context.cpp  context.h  diff_dir.cpp  diff_dir.h  dispatcher.cpp  dispatcher.h  dispatcher_mono.cpp  dispatcher_mono.h  dispatcher_multi.cpp  dispatcher_multi.h  file_comp.cpp  file_comp.h  ignore.cpp  ignore.h  log.h  main.cpp  path.cpp  path.h  report.cpp  report.h  report_compact.cpp  report_compact.h  report_console.cpp  report_console.h  report_interactive.cpp  term_app.cpp  term_app.h  term_app_settings.cpp  term_app_settings.h  text_diff.cpp  text_diff.h  yaml_util.cpp  yaml_util.h
src/test/: test_file_comp.cpp  test_ignore.cpp
termui/: termui.h  termui_internal.h
